2010-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1627/testing
	* libfs/src/devfs/devstat.c:

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/link.c: Do not overwrite errno with return status.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/basedefs.h: New file.
	* score/Makefile.am, score/preinstall.am: Reflect change above.
	* score/include/rtems/score/percpu.h: Include <rtems/score/cpu.h>.
	* score/include/rtems/system.h: Moved definition of SCORE_EXTERN,
	SAPI_EXTERN, RTEMS_EXTERN, POSIX_EXTERN, RTEMS_INLINE_ROUTINE,
	RTEMS_COMPILER_MEMORY_BARRIER, RTEMS_COMPILER_NO_RETURN_ATTRIBUTE,
	RTEMS_COMPILER_DEPRECATED_ATTRIBUTE, TRUE, and FALSE to
	<rtems/score/basedefs.h>.
	Removed include of <rtems/score/cpu.h>, <stdint.h> and <stddef.h>.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libmd/md4.c: Removed definition of TRUE and FALSE.

2010-07-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/privateenv.c: Fix bug.

2010-07-15	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	PR 1607/cpukit
	* score/src/coremutexsurrender.c: Clean up and split out helper
	routines.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/imfs/imfs.h: Changed IMFS_jnode_types_t to an enum.
	Removed IMFS_NUMBER_OF_TYPES define.
	* libfs/src/imfs/imfs_debug.c: Removed IMFS_types.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio_.h: Removed rtems_filesystem_null_handlers.
	* libcsupport/src/fs_null_handlers.c: Removed file.
	* libcsupport/Makefile.am: Reflect change above.
	* libfs/src/nfsclient/src/nfs.c, libfs/src/imfs/imfs_creat.c,
	libfs/src/imfs/imfs_init.c, libfs/src/imfs/miniimfs_init.c: Use
	rtems_filesystem_handlers_default instead of
	rtems_filesystem_null_handlers.
	* libnetworking/lib/ftpfs.c, libnetworking/lib/tftpDriver.c: